Fix a "use valueOf" warning